<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ProfileFragment"
            android:background="@color/white">

            <TextView
                android:id="@+id/userFirstName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="Maayan Yossef"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="Magenheim"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userFirstName" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:src="@mipmap/man_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/myVibe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="'Paranoid Android'"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/vibePointsNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="50 Vibe Points"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myVibe" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/divider_grey"
                app:layout_constraintTop_toBottomOf="@+id/vibePointsNum" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="399dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1">

                <ImageView
                    android:id="@+id/whatsapp_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_whatsapp" />

                <ImageView
                    android:id="@+id/gmail_icon"
                    android:layout_width="339dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_gmail" />

                <ImageView
                    android:id="@+id/messenger"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_facebook_messenger" />
            </LinearLayout>


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/divider_grey"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout" />


            <TextView
                android:id="@+id/title_myBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/my_books"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <ImageView
                android:id="@+id/books_set1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/img1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_myBooks" />

            <TextView
                android:id="@+id/title_booksIRead"
                android:text="@string/books_i_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/books_set1" />

            <ImageView
                android:id="@+id/books_set2"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitXY"
                android:src="@mipmap/temp2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_booksIRead" />



        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
=======
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/title_profile"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="180dp">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="360dp"
            android:background="@mipmap/edit_pngrepo_com" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:text="@string/profile_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/example_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="180dp"
            android:visibility="visible"
            android:text="@string/example_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginStart="180dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="219dp"
                android:layout_height="43dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:hint="Name" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="240dp">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="360dp"
            android:background="@mipmap/edit_pngrepo_com" />


        <TextView
            android:id="@+id/profile_vibez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:text="@string/profile_vibez"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


        <TextView
            android:id="@+id/example_vibez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="180dp"
            android:visibility="visible"
            android:text="@string/example_vibez"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginStart="180dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="219dp"
                android:layout_height="43dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:hint="Vibez" />
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>


    <TextView
        android:id="@+id/user_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="130dp"
        android:text="@string/user_rank"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/profile_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="100dp"
        android:text="@string/profile_rank"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/ic_profile_black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp">

        <TextView
            android:id="@+id/profile_current_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/profile_current_books"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/book1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/book2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="130dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/book3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="210dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/continue_books"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="290dp"
            app:srcCompat="@drawable/image_circle" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp">

        <TextView
            android:id="@+id/profile_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/profile_history"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/history1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/history2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="130dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/history3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="210dp"
            app:srcCompat="@drawable/image_circle" />

        <ImageView
            android:id="@+id/continue_history"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="290dp"
            app:srcCompat="@drawable/image_circle" />

    </RelativeLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="655dp"
        android:layout_marginStart="300dp"
        android:text="@string/log_out" />


</RelativeLayout>

